fix overflow bug

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
     color: #ededed;
     background: #161616;
     margin: 0;
-    overflow: hidden;
 }
 
 #background {
